--- a/AccessoriesApp.Web/Views/Accessories/Edit.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model AccessoriesApp.Web.ViewModels.Accessory.AccessoriesFormInputModel
+﻿@using AccessoriesApp.Web.ViewModels
+@model AccessoriesFormInputModel
 
 @{
     ViewData["Title"] = "Edit";
