--- a/AccessoriesApp.Web/Views/Accessories/Index.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<AccessoriesApp.Web.ViewModels.Accessory.AccessoriesIndexViewModel>
+﻿@using AccessoriesApp.Web.ViewModels
+@model IEnumerable<AccessoriesIndexViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -16,17 +17,20 @@
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TypeAccessory)
+                @Html.DisplayNameFor(model => model.CategoryAccessory)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ReleaseDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PriceBGN)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PriceEuro)
             </th> 
 
             <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
+                @Html.DisplayNameFor(model => model.Image)
             </th> 
 
             <th></th>
@@ -39,16 +43,19 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TypeAccessory)
+                @Html.DisplayFor(modelItem => item.CategoryAccessory)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ReleaseDate)
             </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.PriceBGN)
+                </th>
             <td>
                 @Html.DisplayFor(modelItem => item.PriceEuro)
             </td>            
             <td>
-                @Html.DisplayFor(modelItem => item.ImageUrl)
+                @Html.DisplayFor(modelItem => item.Image)
             </td>            
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
