--- a/AccessoriesApp.Web/Views/Accessories/Details.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model AccessoriesApp.Web.ViewModels.Accessory.AccessoriesDetailsViewModel
+﻿@using AccessoriesApp.Web.ViewModels
+@model AccessoriesDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -17,10 +18,10 @@
             @Html.DisplayFor(model => model.Title)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TypeAccessory)
+            @Html.DisplayNameFor(model => model.CategoryAccessory)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TypeAccessory)
+            @Html.DisplayFor(model => model.CategoryAccessory)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ReleaseDate)
@@ -28,14 +29,20 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.PriceBGN)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PriceBGN)
+        </dd>
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PriceEuro)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PriceEuro)
         </dd>
-        
-        
 
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
@@ -44,10 +51,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
+            @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
+            @Html.DisplayFor(model => model.Image)
         </dd>
         
         
