--- a/AccessoriesApp.Web/Views/Accessories/Index.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Index.cshtml
@@ -48,9 +48,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ReleaseDate)
             </td>
-                <th>
-                    @Html.DisplayNameFor(model => model.PriceBGN)
-                </th>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PriceBGN)
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PriceEuro)
             </td>            
