--- a/AccessoriesApp.Web/Views/Accessories/Add.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Add.cshtml
@@ -11,9 +11,17 @@
 </div>
 <hr />
 
+<div class="row justify-content-center" style="margin: 0 auto; ">
+    <div class="col-md-4 text-center">
+
+        <img id="imagePreview" src="#" alt="Preview" class="img-fluid w-100 h-100 object-fit-cover" alt="No Image Available" />
+      
+    </div>
+
+    <div class="col-md-8">
 <div class="row">
-    <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
-        <form asp-controller="Accessories" asp-action="Add" method="post">
+    <div class="col-sm-12 ">
+        <form asp-controller="Accessories" asp-action="Add" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger fw-bold"></div>
             <div class="row">
                 <div class="col-sm-6 mb-2">
@@ -40,7 +48,7 @@
             <div class="col-sm-6 mb-2">
                 <label asp-for="@Model.PriceBGN" class="form-label-add-edit">Accessory Price(BGN)</label>
                 <input asp-for="@Model.PriceBGN" class="form-control" aria-required="true" />
-                <span asp-validation-for="@Model.Title" class="text-danger"></span>
+                <span asp-validation-for="@Model.PriceBGN" class="text-danger"></span>
             </div>
 
 
@@ -51,21 +59,30 @@
                 <span asp-validation-for="@Model.Description" class="text-danger"></span>
             </div>
 
-            <!--
-            <div class="mb-2">
-                <label asp-for="@Model.Image" class="form-label-add-edit">Image URL</label>
-                <input asp-for="@Model.Image" class="form-control" aria-required="false" placeholder="Enter image URL (optional)" />
-                <span asp-validation-for="@Model.Image" class="text-danger"></span>
-            </div>
-            -->
             
-
             <div class="mb-2">
-                <button class="btn btn-warning btn-dark-text w-100 py-2 fw-bold rounded" type="submit">
+                <label asp-for="@Model.File" class="form-label-add-edit">Image URL</label>
+                <input asp-for="@Model.File" class="form-control" type="file" aria-required="false" placeholder="Choose image file (optional)" accept=".jpg,.jpeg,.png" />
+                <span asp-validation-for="@Model.File" class="text-danger"></span>
+            </div>
+
+            <div class="mb-0">
+                <button class="btn btn-warning btn-dark-text w-100 pb-0 fw-bold rounded" type="submit">
                     <i class="fas fa-save"></i> Save
                 </button>
             </div>
+
         </form>
     </div>
 </div>
+</div>
+
+</div>
+
+
+
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
 
