--- a/AccessoriesApp.Web/Views/Accessories/Add.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Add.cshtml
@@ -14,7 +14,7 @@
 <div class="row justify-content-center" style="margin: 0 auto; ">
     <div class="col-md-4 text-center">
 
-        <img id="imagePreview" src="#" alt="Preview" class="img-fluid w-100 h-100 object-fit-cover" alt="No Image Available" />
+        <img id="imagePreview" src="~/images/default-image.jpg" alt="Preview" class="img-fluid w-100 h-100 object-fit-cover" alt="No Image Available" />
       
     </div>
 
