--- a/AccessoriesApp.Web/Views/Accessories/Index.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Index.cshtml
@@ -35,7 +35,7 @@
 
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">@item.Title</h5>
-                    <p class="card-text">Category: @item.CategoryAccessory</p>
+                    <p class="card-text">Category: @item.CategoryName</p>
                     <!--
                     <p class="card-text"><small>Favorites: @item.SavedCount</small></p>
                     -->
