--- a/AccessoriesApp.Web/Views/Accessories/Add.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Add.cshtml
@@ -61,7 +61,7 @@
 
             
             <div class="mb-2">
-                <label asp-for="@Model.File" class="form-label-add-edit">Image URL</label>
+                <label asp-for="@Model.File" class="form-label-add-edit">Image</label>
                 <input asp-for="@Model.File" class="form-control" type="file" aria-required="false" placeholder="Choose image file (optional)" accept=".jpg,.jpeg,.png" />
                 <span asp-validation-for="@Model.File" class="text-danger"></span>
             </div>
