--- a/AccessoriesApp.Web/Views/Accessories/Index.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Index.cshtml
@@ -26,11 +26,15 @@
             <div class="card h-100" style="width: 100%;">
                 @if (item.Image != null)
                 {
+                    <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id">
                     <img src="data:image/jpeg;base64,@Convert.ToBase64String(item.Image)" class="card-img-top" style="max-height: 150px; object-fit: contain;" alt="@item.Title">
+                    </a>
                 }
                 else
                 {
+                    <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id">
                     <img src="~/images/default-image.jpg" class="card-img-top" style="max-height: 150px; object-fit: contain;" alt="No Image Available">
+                    </a>
                 }
 
                 <div class="card-body d-flex flex-column">
@@ -42,15 +46,24 @@
                     <div class="d-flex justify-content-between mt-auto">
                         @if (User?.Identity?.IsAuthenticated == true && !item.IsAuthor && !item.IsSaved)
                         {
-                            <a asp-controller="Recipe" asp-action="Details" asp-route-id="@item.Id" class="btn btn-info me-2 w-50">
+                            <!-- First row with Details and Favorites -->
+                            <!--
+                            <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id" class="btn btn-info me-2 w-50">
                                 <i class="fas fa-info-circle"></i> Details
                             </a>
-                            <form asp-controller="Recipe" asp-action="Save" method="post" class="w-50">
+                            -->
+
+                            <form asp-controller="Accessories" asp-action="Save" method="post" class="w-50 me-2">
                                 <input type="hidden" name="id" value="@item.Id" />
                                 <button type="submit" class="btn btn-success w-100">
                                     <i class="fas fa-heart"></i> Favorites
                                 </button>
                             </form>
+                            
+
+                            <a asp-controller="OrderItem" asp-action="Create" asp-route-id="@item.Id" class="btn btn-danger w-50">
+                                <i class="fas fa-info-circle"></i> Add to Orders
+                            </a>
                         }
                         else
                         {
