--- a/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
+++ b/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/AccessoriesApp.Web.styles.css" asp-append-version="true" />
 
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" />                
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
+
     <style>
         .quantity-input {
             font-size: 1.1rem;
@@ -15,12 +19,26 @@
             border-radius: 0.5rem;
         }
 
+        /*
         .btn-minus, .btn-plus {
             width: 40px;
             height: 40px;
             font-size: 1.25rem;
             border-radius: 0.5rem;
         }
+        */
+
+    .btn-minus {
+     font-weight: bold;
+     font-size: 20px;
+    }
+
+    .btn-plus {
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+
     </style>
 
 </head>
@@ -30,15 +48,15 @@
             <div class="container-fluid">
                 @if (User?.Identity?.IsAuthenticated ?? false)
                 {
-                    <a class="navbar-brand" asp-controller="Recipe" asp-action="Index">
-                        <i class="fas fa-utensils"></i> RecipeSharing
+                    <a class="navbar-brand" asp-controller="Recipe" asp-action="Index">                        
+                        <i class="fa-solid fa-hat-cowboy-side"></i> Оur Аccessories
                         <span class="visually-hidden">(current)</span>
                     </a>
                 }
                 else
                 {
-                    <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-                        <i class="fas fa-utensils"></i> RecipeSharing
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index">                        
+                        <i class="fa-solid fa-hat-cowboy-side"></i> Оur Аccessories
                         <span class="visually-hidden">(current)</span>
                     </a>
                 }
@@ -65,7 +83,7 @@
                         @if (User?.Identity?.IsAuthenticated ?? false)
                         {
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Recipes</a>
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Accessories</a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" asp-controller="Accessories" asp-action="Index">
                                         <i class="fas fa-list"></i> All Accessories
@@ -79,6 +97,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="Accessories" asp-action="Favorites">
                                     <i class="fas fa-heart"></i> Favorites
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="OrderItem" asp-action="Index">
+                                    <i class="fa-solid fa-cart-shopping"></i> Shopping cart
                                 </a>
                             </li>
                         }
@@ -173,30 +197,25 @@
 
         });
 
+                
 
-           $('.quantity-wrapper').each(function () {
-          const $wrapper = $(this);
-          const $input = $wrapper.find('.quantity-input');
-          const $btnMinus = $wrapper.find('.btn-minus');
-          const $btnPlus = $wrapper.find('.btn-plus');
-
-          $('.btnMinus').on('click', function () {
-            let current = parseInt($input.val()) || 0;
-            let min = parseInt($input.attr('min')) || 0;
-            if (current > min) {
-              $input.val(current - 1).trigger('input');
-            }
-          });
-
-          $('.btnPlus').on('click', function () {
-            let current = parseInt($input.val()) || 0;
-            let max = parseInt($input.attr('max')) || Infinity;
-            if (current < max) {
-              $input.val(current + 1).trigger('input');
-            }
-          });
+         $('.btn-minus').on('click', function () {
+          const $input = $(this).next('input');           
+          let value = parseInt($input.val());          
+          if (value > 1) {
+            $input.val(value - 1);
+          }
+          $input.trigger('input');   // triggers input event
         });
+
         
+
+        $('.btn-plus').on('click', function () {            
+          const $input = $(this).prev('input');                  
+          let value = parseInt($input.val());          
+          $input.val(value + 1);   
+          $input.trigger('input');   // triggers input event
+        });        
 
 
         });
