--- a/AccessoriesApp.Web/Views/Accessories/Details.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Details.cshtml
@@ -16,16 +16,16 @@
 </div>
 <hr />
 
-<div class="card mb-3 w-75">
+<div class="card mb-3 w-100" >
 <div class="row justify-content-center" >
     <div class="col-md-4 text-center">
         @if (Model.Image != null)
         {
-            <img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Image)" class="img-fluid w-100 h-100 object-fit-cover" alt="@Model.Title" />
+                <img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Image)" class="img-fluid w-100 h-100 object-fit-cover" alt="@Model.Title" />
         }
         else
         {
-            <img src="~/images/default-image.jpg" class="img-fluid" style="img-fluid w-100 h-100 object-fit-cover" alt="No Image Available" />
+                <img src="~/images/default-image.jpg" class="img-fluid" style="img-fluid w-100 h-100 object-fit-scale" alt="No Image Available" />
         }
     </div>
 
@@ -37,6 +37,7 @@
             <hr />
             <p class="card-text"><small class="text-muted">Category: @Model.CategoryName</small></p>
             <p class="card-text"><small class="text-muted">Created On: @Model.ReleaseDate.ToString("dd-MM-yyyy")</small></p>
+            <p class="card-text"><small class="text-muted">Author: @Model.PriceBGN</small></p>
             <p class="card-text"><small class="text-muted">Author: @Model.AuthorUserName</small></p>
             <hr />
         </div>
