--- a/AccessoriesApp.Web/Views/Accessories/Details.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Details.cshtml
@@ -54,6 +54,9 @@
                             <i class="fas fa-heart"></i> Add to Favorites
                         </button>
                     </form>
+                    <a asp-controller="OrderItem" asp-action="Create" asp-route-id="@Model.Id" class="btn btn-danger d-flex justify-content-center align-items-center flex-fill mx-1">
+                            <i class="fa-solid fa-cart-shopping"></i> Аdd to Orders
+                    </a>
                 }
                 @if (Model.IsAuthor)
                 {
