--- a/AccessoriesApp.Web/Views/OrderItem/Create.cshtml
+++ b/AccessoriesApp.Web/Views/OrderItem/Create.cshtml
@@ -58,7 +58,7 @@
 
                     <div class="col-sm-6 mb-2">
                         <label asp-for="@Model.Quantity" class="form-label-add-edit">Quantity</label>
-                        <input asp-for="@Model.Quantity" class="form-control" aria-required="true" type="number" />
+                        <input asp-for="@Model.Quantity" class="form-control w-50" aria-required="true" type="number" />
                         <span asp-validation-for="@Model.Quantity" class="text-danger"></span>                        
                     </div>
 
@@ -74,7 +74,7 @@
                     <input asp-for="@Model.OrderItemAccessoryId" type="hidden" />
 
                     <div class="mb-0">
-                        <button class="btn btn-warning btn-dark-text w-100 pb-0 fw-bold rounded" type="submit">
+                        <button class="btn btn-warning btn-dark-text w-50 pb-0 fw-bold rounded" type="submit">
                             <i class="fas fa-save"></i> Save
                         </button>
                     </div>
