--- a/AccessoriesApp.Web/Views/OrderItem/Index.cshtml
+++ b/AccessoriesApp.Web/Views/OrderItem/Index.cshtml
@@ -98,7 +98,7 @@
     @if (User?.Identity?.IsAuthenticated == true)
     {
         <div id="mytotal" class="text-danger fs-3 fw-bold">@ViewData["SumOrder"]</div>
-        <a asp-controller="Accessories" asp-action="Add" class="btn btn-primary">
+        <a asp-controller="Order" asp-action="Index" class="btn btn-primary">
             <i class="fa-solid fa-circle-check"></i> Confirm Order
         </a>
     }
