--- a/AccessoriesApp.Web/Views/Accessories/Index.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Index.cshtml
@@ -13,7 +13,7 @@
     @if (User?.Identity?.IsAuthenticated == true)
     {
         <a asp-controller="Accessories" asp-action="Add" class="btn btn-primary">
-            <i class="fas fa-plus"></i> Add Recipe
+            <i class="fas fa-plus"></i> Add Accessory
         </a>
     }
 </div>
