--- a/AccessoriesApp.Web/Views/Order/Confirm.cshtml
+++ b/AccessoriesApp.Web/Views/Order/Confirm.cshtml
@@ -7,8 +7,12 @@
 
 <h1>Shopping cart</h1>
 
+@if (User?.Identity?.IsAuthenticated == true)
+{
 
-<div class="row justify-content-center" style="margin: 0 auto; ">    
+    <form asp-controller="Order" asp-action="Confirmed" method="post">
+    <input type="hidden" name="id" value="@Model.Id" />
+    <div class="row justify-content-center" style="margin: 0 auto; ">    
 
     <div class="col-md-8">
 
@@ -58,19 +62,15 @@
 
     
     <div class="d-flex flex-column align-items-start mb-3">
-    @if (User?.Identity?.IsAuthenticated == true)
-    {
-        <form asp-controller="Order" asp-action="Confirm" method="post" >
-        <div id="mytotal" class="text-danger fs-3 fw-bold">@ViewData["SumOrder"]</div>
-        <input type="hidden" name="id" value="@Model.OrderItems.FirstOrDefault().OrderId" />
-        <button type="submit" class="btn btn-sm btn-danger mt-2">
-        <i class="fas fa-heart"></i> Remove from Orders
-        </button>
-        </form>
-    }    
+        <div id="mytotal" class="text-danger fs-3 fw-bold">@ViewData["SumOrder"]</div>        
+        <button type="submit" class="btn btn-sm btn-success mt-2">
+        <i class="fa-solid fa-truck"></i> Send order
+        </button> 
     </div>    
     
     </div>
 
-</div>
+    </div>
+    </form>
+    }
 
