--- a/AccessoriesApp.Web/Views/Order/Confirmed.cshtml
+++ b/AccessoriesApp.Web/Views/Order/Confirmed.cshtml
@@ -23,9 +23,67 @@
                     <p class="card-text">PriceEuro: @Model.TotalPriceEuro</p>                
                     <p class="card-text">CourierName: @Model.CourierName</p>
                     <p class="card-text">IsOrderConfirmed: @Model.IsOrderConfirmed</p>
+                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detailsModal" >
+                    View Details
+                </button>
                 </div>                                 
             </div>
 
+    </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Order Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+
+@foreach (var item in Model.OrderItems)
+{
+    <div class="card mb-3">
+        <div class="row justify-content-center">
+            <div class="col-md-4 text-center">
+
+                @if (item.Image != null)
+                {
+                    <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id">
+                        <img src="data:image/jpeg;base64,@Convert.ToBase64String(item.Image)" class="img-fluid w-100 h-100 object-fit-cover" style="max-height: 150px;" alt="@item.Title">
+                    </a>
+                }
+                else
+                {
+                    <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id">
+                        <img src="~/images/default-image.jpg" class="img-fluid w-100 h-100 object-fit-cover" style="max-height: 150px; object-fit: contain;" alt="No Image Available">
+                    </a>
+                }
+            </div>
+
+            <div class="col-md-8">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">@item.Title</h5>
+                    <p class="card-text">Category: @item.CategoryName</p>
+                    <p class="card-text">PriceBGN: @item.PriceBGN</p>
+                    <p class="card-text">PriceEuro: @item.PriceEuro</p>
+                    <p class="card-text">Quantity: @item.Quantity</p>
+                    <p class="card-text">Total price BGN: @(item.Quantity* item.PriceBGN)</p>
+                    <p class="card-text">Total price Euro: @(item.Quantity* item.PriceEuro)</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+}
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
     </div>
 </div>
 
