--- a/AccessoriesApp.Web/Views/OrderItem/Index.cshtml
+++ b/AccessoriesApp.Web/Views/OrderItem/Index.cshtml
@@ -64,7 +64,7 @@
                             
                                 <input type="hidden" name="id" value="@item.Id" />                                
                                 <button type="submit" class="btn btn-sm btn-danger mt-2">
-                                    <i class="fas fa-heart"></i> Remove from Orders
+                                    <i class="fa-solid fa-square-minus"></i> Remove from Orders
                                 </button>
                             </form>
                             
