--- a/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
+++ b/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
@@ -88,23 +88,51 @@
                                     <a class="dropdown-item" asp-controller="Accessories" asp-action="Index">
                                         <i class="fas fa-list"></i> All Accessories
                                     </a>
+                                    <!--
+                                    <div class="dropdown-divider"></div>      
+                                    -->
+                                </div>
+                            </li>
+
+                            @if (!User.IsInRole("Admin"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="Favorites" asp-action="GetAllFavorites">
+                                        <i class="fas fa-heart"></i> Favorites
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="OrderItem" asp-action="Index">
+                                        <i class="fa-solid fa-cart-shopping"></i> Shopping cart
+                                    </a>
+                                </li>
+                            }
+
+                            @if (User.IsInRole("Admin"))
+                            {
+                            /*
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Admin" asp-action="AssignRole">
+                                    <i class="fa-solid fa-user-tie"></i> Admin
+                                </a>
+                            </li>
+                            */
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa-solid fa-user-tie"></i> Admin</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" asp-controller="Admin" asp-action="AssignRole">
+                                         Assign Roles
+                                    </a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" asp-controller="Accessories" asp-action="Add">
                                         <i class="fas fa-plus"></i> Add Accessory
                                     </a>
                                 </div>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="Accessories" asp-action="Favorites">
-                                    <i class="fas fa-heart"></i> Favorites
-                                </a>
-                            </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="OrderItem" asp-action="Index">
-                                    <i class="fa-solid fa-cart-shopping"></i> Shopping cart
-                                </a>
-                            </li>
+                            }
                         }
                         else
                         {
